# -AAL-Discrete-Knapsack-Problem

./: .clang-format  .gitignore  CMakeLists.txt  FileStreamRunMode.cpp  FileStreamRunMode.h  Knapsack.cpp  Knapsack.h  README.md  RunMode.cpp  RunMode.h  in.txt  in[structure].txt  main.cpp
.github/workflows/: build.yml  test.yml
UnitTests/: KnapsackUnitTest.cpp
notebooks/: Analysis (naive).ipynb  Analysis (optymalny).ipynb  naive.csv  optimal.csv
src/: Benchmark.cpp  Benchmark.hpp  FileStreamRunMode.cpp  FileStreamRunMode.hpp  Generator.cpp  Generator.hpp  Item.hpp  Knapsack.cpp  Knapsack.hpp  RunMode.cpp  RunMode.hpp  main.cpp
test/: ItemTest.cpp  KnapsackTest.cpp  NaiveKnapsackTest.cpp
